fix(close-button): align icon sizes with ui-icon spec per review
Map default and large to ui-icon-large, small to ui-icon-small, and
extra-large to ui-icon-extra-large as requested in PR review.

--- a/2nd-gen/packages/swc/components/close-button/close-button.css
+++ b/2nd-gen/packages/swc/components/close-button/close-button.css
@@ -75,8 +75,8 @@
 .swc-CloseButton-icon {
   display: block;
   flex-shrink: 0;
-  inline-size: var(--swc-close-button-icon-size, token("ui-icon-extra-large"));
-  block-size: var(--swc-close-button-icon-size, token("ui-icon-extra-large"));
+  inline-size: var(--swc-close-button-icon-size, token("ui-icon-large"));
+  block-size: var(--swc-close-button-icon-size, token("ui-icon-large"));
 }
 
 .swc-CloseButton-icon svg {
@@ -87,17 +87,17 @@
 }
 
 :host([size="s"]) {
-  --swc-close-button-icon-size: token("ui-icon-large");
+  --swc-close-button-icon-size: token("ui-icon-small");
   --swc-close-button-size: token("component-height-75");
 }
 
 :host([size="l"]) {
-  --swc-close-button-icon-size: token("ui-icon-2x-large");
+  --swc-close-button-icon-size: token("ui-icon-large");
   --swc-close-button-size: token("component-height-200");
 }
 
 :host([size="xl"]) {
-  --swc-close-button-icon-size: token("ui-icon-2x-large");
+  --swc-close-button-icon-size: token("ui-icon-extra-large");
   --swc-close-button-size: token("component-height-300");
 }
 
